==> reweiser3/freETarget/Software/ESP32/tcp_server/main/gpio.c <==
#include "freETarget.h"
#include "gpio.h"
#include "timer.h"
#include "diag_tools.h"
#include "stdio.h"
#include "json.h"
#include "token.h"

unsigned int is_running (void)
{
  unsigned int i;
  
  i = (RUN_PORT & RUN_A_MASK)  >> RUN_LSB;

 /*
  *  Return the running mask
  */
  return i;
  }

void arm_timers(void)
{
  digitalWrite(CLOCK_START, 0);   // Make sure Clock start is OFF
  digitalWrite(STOP_N, 0);        // Reset the flip flop to stop the timers
  digitalWrite(RCLK,   0);        // Set READ CLOCK to LOW
  digitalWrite(QUIET,  1);        // Arm the counter
  digitalWrite(CLR_N,  0);        // Reset the counters 
  digitalWrite(CLR_N,  1);        // Remove the counter reset 
  digitalWrite(STOP_N, 1);        // Let the counters run
  
  return;
}

void stop_timers(void)
{
  digitalWrite(STOP_N,0);   // Stop the counters
  digitalWrite(QUIET, 0);   // Kill the oscillator 
  return;
}

unsigned int read_DIP
(
  unsigned int dip_mask
)
{
  unsigned int return_value;
  
  if ( revision() < REV_300 )          // The silkscreen was reversed in Version 3.0  oops
  {
    return_value =  (~((digitalRead(DIP_0) << 0) + (digitalRead(DIP_1) << 1) + (digitalRead(DIP_2) << 2) + (digitalRead(DIP_3) << 3))) & 0x0F;  // DIP Switch
  }
  else
  {
    return_value =  (~((digitalRead(DIP_3) << 0) + (digitalRead(DIP_2) << 1) + (digitalRead(DIP_1) << 2) + (digitalRead(DIP_0) << 3))) & 0x0F;  // DIP Switch
  }
  return_value &= (~dip_mask);
  return_value |= json_dip_switch;  // JSON message
  return_value |= 0xF0;             // COMPILE TIME

  return return_value;
}

void read_timers
  (
    unsigned int* timer_ptr
  )
{
  unsigned int i;

  for (i=N; i<=W; i++)
  {
    *(timer_ptr + i) = read_counter(i);
  }

  return;
}

static void paper_on_off                        // Function to turn the motor on and off
  (
  bool_t on                                       // on == true, turn on motor drive
  )
{
  if ( on == true )
  {
    if ( revision() < REV_300 )                 // Rev 3.0 changed the motor sense
    {
      digitalWrite(PAPER, PAPER_ON);            // Turn it on
    }
    else
    {
      digitalWrite(PAPER, PAPER_ON_300);        //
    }
  }
  else
  {
    if ( revision() < REV_300 )                 // Rev 3.0 changed the motor sense
    {
      digitalWrite(PAPER, PAPER_OFF);            // Turn it off
    }
    else
    {
      digitalWrite(PAPER, PAPER_OFF_300);        //
    }
  }

/*
 * No more, return
 */
  return;
}

void digital_test(void)
{

  int i;
  double       volts;         // Reference Voltage
  
/*
 * Read in the fixed digital inputs
 */
  printf("\r\nTime:");                      Serial.print(micros()/1000000); Serial.print("."); Serial.print(micros()%1000000); printf("s");
  printf("\r\nBD Rev:");                    Serial.print(revision());       
  printf("\r\nDIP: 0x");                    Serial.print(read_DIP(0), HEX); 
  digitalWrite(STOP_N, 0);
  digitalWrite(STOP_N, 1);                        // Reset the fun flip flop
  printf("\r\nRUN FlipFlop: 0x");           Serial.print(is_running(), HEX);   
  printf("\r\nTemperature: ");              Serial.print(temperature_C());  printf("'C ");
  Serial.print(speed_of_sound(temperature_C(), json_rh));  printf("mm/us");
  printf("\r\nV_REF: ");                    Serial.print(volts); printf(" Volts");
  printf("\r\n");

/*
 * Read the port pins and report
 */
  i=0;
  while (init_table[i].port != 0xff)
  {
    if ( init_table[i].in_or_out == OUTPUT )
    {
      printf("\r\n OUT >> ");
    }
    else
    {
      printf("\r\n IN  << ");
    }
    Serial.print(init_table[i].gpio_name); Serial.print(digitalRead(init_table[i].port));
    i++;
  }

 /*
  * Blink the LEDs and exit
  */
   POST_LEDs();
   return;
}

void rapid_red
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_RED )
  {
      digitalWrite(DIP_0, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_RED )
  {
      digitalWrite(DIP_3, state);
  }

  return;
}

void rapid_green
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_GREEN )
  {
      digitalWrite(DIP_0, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_GREEN )
  {
      digitalWrite(DIP_3, state);
  }

  return;
}
