==> reweiser3/freETarget/Software/ESP32/main/gpio.c <==
#include <string.h>
#include "esp_log.h"
#include "driver/rmt_tx.h"
#include "gpio_types.h"
#include "driver\gpio.h"
#include "esp_timer.h"
#include "led_strip_types.h"
#include "freETarget.h"
#include "diag_tools.h"
#include "gpio.h"
#include "timer.h"
#include "json.h"
#include "serial_io.h"
#include "timer.h"
#include "pcnt.h"
#include "gpio_define.h"
#include "../managed_components/espressif__led_strip/src/led_strip_rmt_encoder.h"

unsigned int is_running (void)
{
  unsigned int  return_value;
  unsigned int  i;

  return_value = 0;
/*
 * Read the running inputs
 */
  for (i=0; i != 8; i++)
  {
    if ( gpio_get_level(clock[i]) != 0 )
    {
      return_value |= run_mask[i];
    }
  }

/*
 *  Return the run mask
 */
  return return_value;                   // Return the running mask
}

void arm_timers(void)
{
  gpio_set_level(CLOCK_START, 0);
  gpio_set_level(STOP_N, 0);                  // Reset the timer
  gpio_set_level(CLOCK_ON, OSC_OFF);          // Turn off the oscillator
  pcnt_clear();
  gpio_intr_enable(RUN_NORTH_HI);             // Turn on the interrupts
  gpio_intr_enable(RUN_EAST_HI);
  gpio_intr_enable(RUN_SOUTH_HI);
  gpio_intr_enable(RUN_WEST_HI);
  gpio_set_level(CLOCK_ON, OSC_ON);
  vTaskDelay(1);                                        // Let the oscillator start up
  gpio_set_level(STOP_N, 1);                  // Then enable it
  return;
}

void stop_timers(void)
{
  gpio_set_level(CLOCK_ON, OSC_OFF);
  gpio_set_level(STOP_N, 0);      // Reset the timer
  return;
}

unsigned int read_DIP(void)
{
  unsigned int return_value = 0;
  unsigned int dips[] = {DIP_A, DIP_B, DIP_C, DIP_D};
  unsigned int bit_mask[] = {0x08, 0x04, 0x02, 0x01};
  unsigned int i;

  for (i=0; i != sizeof(dips)/sizeof(unsigned int); i++)
  {
    if (gpio_get_level(dips[i]) != 0) 
    {
     return_value |= bit_mask[i];
    }
  }

  return return_value;
}

void read_timers
(
  int timer[]
)
{
  unsigned int i;
  double pcnt_hi;                               // Reading from high counter 

  for (i=0; i<=8; i++)
  {
    timer[i] = pcnt_read(i);
  }

  if ( (json_pcnt_latency != 0)                   // Latecy has a valid setting
          && ((json_vref_hi - json_vref_lo) > 0 ) ) // The voltage references are good
  {
    for (i=N; i <= W; i++)                        // Add the rise time to the signal to get a better estimate
    {
      pcnt_hi = timer[i+4] - json_pcnt_latency;   // PCNT HI   (reading - latentcy)
      if ( pcnt_hi > 0 )
      {
        timer[i] = timer[i] + pcnt_hi * (json_vref_lo / (json_vref_hi - json_vref_lo));
      }
    }
  }

  return;
}

void paper_on_off                               // Function to turn the motor on and off
(
  bool on                                      // on == true, turn on motor drive
)
{
  if ( on == true )
  {
    gpio_set_level(PAPER, PAPER_ON);            // Turn it on
  }
  else
  {
    gpio_set_level(PAPER, PAPER_OFF);            // Turn it off
  }

/*
 * No more, return
 */
  return;
}

void rapid_red
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_RED )
  {
      gpio_set_level(DIP_0, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_RED )
  {
      gpio_set_level(DIP_C, state);
  }

  return;
}

void rapid_green
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_GREEN )
  {
      gpio_set_level(DIP_B, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_GREEN )
  {
      gpio_set_level(DIP_A, state);
  }

  return;
}

void digital_test(void)
{
  printf("\r\nDigital test");

/*
 * Read in the fixed digital inputs
 */
  printf("\r\nTime: %4.2fs", (float)(esp_timer_get_time()/1000000));
  printf("\r\nDIP: 0x%02X", read_DIP()); 
  printf("\r\nDone\r\n");

   return;
}
